Fix problem with align elements in top-content-block

--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ header {
 
 }
 .top-content-block {
+    display: block;
     margin-top: 40px;
     text-align: center;
 }
